# video-selector

./: .gitignore  README.md  pyproject.toml  video_selector.spec
.github/workflows/: build.yml
src/video_selector/: __init__.py  __main__.py  app.py  cache.py  duration.py  export.py  probe.py  scanner.py  search.py
tests/: test_app.py  test_cache.py  test_duration.py  test_export.py  test_probe.py  test_scanner.py  test_search.py
